[metadata]
name = sshmap
version = 1.1.0

[options.extras_require]
dev =
    nose
    nose-cov

doc_build =
    sphinx<1.6.0
    sphinx_rtd_theme
    guzzle_sphinx_theme
    recommonmark
    pygments

jupyter =
    jupyter

test =
    nose
    serviceping

django_template =
    django

all =
    django
    nose
    nose-cov
    serviceping
    jupyter
    sphinx
    sphinx_rtd_theme
    recommonmark
    pygments

[options.entry_points]
console_scripts =
    sshmap=sshmap.cli_v1:cli
    sshmap2=sshmap.cli_v2:cli
